# trading-bot

./: .gitignore  pyproject.toml
