[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["Matouš Vondrák <matousik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
tensorflow = "^2.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
